--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,6 @@
     <div class="page">
       <aside class="photo-rail left" aria-hidden="true">
         <img src="images/photo-01.jpg" alt="" loading="lazy" decoding="async" style="--r: -3.2deg; --s: 1.05; --w: 234px; --tx: -5.6px; --ty: -15.2px; --dur: 18.5s; --delay: -6.8s;" />
-        <img src="images/photo-03.jpg" alt="" loading="lazy" decoding="async" style="--r: -5.0deg; --s: 1.06; --w: 273px; --tx: -13.9px; --ty: -15.1px; --dur: 13.8s; --delay: -9.9s;" />
         <img src="images/photo-05.jpg" alt="" loading="lazy" decoding="async" style="--r: -3.6deg; --s: 1.00; --w: 315px; --tx: 2.2px; --ty: -1.0px; --dur: 12.3s; --delay: -0.5s;" />
         <img src="images/photo-07.jpg" alt="" loading="lazy" decoding="async" style="--r: 0.6deg; --s: 1.06; --w: 305px; --tx: 18.2px; --ty: 16.1px; --dur: 19.0s; --delay: -1.5s;" />
         <img src="images/photo-09.jpg" alt="" loading="lazy" decoding="async" style="--r: 8.3deg; --s: 1.04; --w: 225px; --tx: -1.6px; --ty: 14.2px; --dur: 18.1s; --delay: -12.7s;" />
@@ -59,7 +58,7 @@
               <p class="message-body">「新年あけましておめでとう」というのは伝わっているでしょう。では以下偉人の名言を胸に刻んでください。そして人生の教訓にするとよいでしょう。<br />
               "Happiness depends upon ourselves."（幸福は自分次第）— アリストテレス<br />
               "The purpose of our lives is to be happy."（人生の目的は幸福である）— ダライ・ラマ<br />
-              "お前次第だろ"（喜怒哀楽をどう感じるのかは自分にしか決められない。自分が良いと思う感じ方に自分がすれば良い）— S・F(or L)・Y</S><br /><br />
+              "お前次第だろ"（喜怒哀楽をどう感じるのかは自分にしか決められない。自分が良いと思う感じ方に自分がすれば良い）— S・P(or L)・Y</S><br /><br />
 
               君は石を空に向かって投げたり、海に向かってクロックスを投げたり、投げることが多い人生でしたね。<br />
               投げることが好きでも人生は投げないようにしましょう。<br />
